# trappable

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml
gui/: CMakeLists.txt  Inputs.cpp  Inputs.h  MainWindow.qml  MathieuBackend.cpp  MathieuBackend.h  MathieuWindow.cpp  MathieuWindow.h  MiniCalculator.cpp  MiniCalculator.h  Outputs.cpp  Outputs.h  StabilityOutputs.cpp  StabilityOutputs.h  appicon.rc  icons.qrc  main.cpp  test_qcustomplot.cpp
gui/plot/: MathieuStabilityPlot.cpp  MathieuStabilityPlot.h  QCustomPlotTheme.h  StabilityRegionPlotter.cpp  StabilityRegionPlotter.h
gui/plot/QCustomPlot/: CMakeLists.txt  qcustomplot.cpp
gui/stability/: StabilityCalculator.cpp  StabilityCalculator.h  StabilityOutputs.cpp  StabilityOutputs.h
mathieu_lib/: CMakeLists.txt
mathieu_lib/include/: Constants.h
mathieu_lib/include/mathieu_lib/: mathieu.h
mathieu_lib/src/: mathieu.cpp
tests/: test_mathieu.cpp  test_mathieu_e2e.cpp  test_mathieu_vector.cpp  test_mathieuwindow_gui.cpp  test_stabilitycalculator.cpp  test_stabilityoutputs.cpp
